# promise-zk

./: .gitignore  commit.circom  readme.md  unlock.circom  walrus_publish.sh  walrus_set_suins.sh  walrus_set_suins_beta.sh  walrus_update.sh  walrus_update_beta.sh  zk-circuit.md
ark-serializer/: .gitignore  Cargo.toml  LICENSE_MIT  package-lock.json
ark-serializer/pkg/: ark_serializer.d.ts  ark_serializer.js  ark_serializer_bg.js  ark_serializer_bg.wasm  package.json
ark-serializer/pkg_node/: README.md  ark_serializer.js  ark_serializer_bg.js  ark_serializer_bg.wasm  ark_serializer_bg.wasm.d.ts  package.json
ark-serializer/src/: lib.rs
boneh-encode/: hash_to_curve.js  hash_to_curve.mjs  package-lock.json  package.json
client-scripts/: answers.id  deploy.js  game.id  package-lock.json  package.id  package.json  professor.js  profiles.id  quest.id  quest.ids  serialize_vkey.js  student.js
client-scripts/compiled_circuits/: commit_main.groth16.vkey.json  commit_main.groth16.zkey  commit_main.wasm
my-mint/: index.html  package-lock.json  package.json  vite.config.js
my-mint/public/: Gold.svg:Zone.Identifier  snark.min.js
my-mint/public/compiled_circuits/: commit_main.groth16.vkey.json  unlock_main.groth16.vkey.json  unlock_main.groth16.zkey  unlock_main.js  unlock_main.wasm
my-mint/src/: App.css  App.jsx  index.css
sui-verifier/: Move.toml
sui-verifier/sources/: dev_verifier.move
